# tabula

./: .gitignore  .goreleaser.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  go.mod  go.sum  package.json  playwright.config.ts  playwright.e2e.config.ts  pyproject.toml
docs/: architecture.md  codex-app-server-pivot.md  companion-mode-whitepaper.md  delegation-routing-v2.md  design-lineage.md  extension-platform-whitepaper.md  helpy-recovery-issue-pack.md  interaction-grammar.md  interfaces.md  meeting-notes-privacy.md  meeting-partner-whitepaper.md  model-download-policy.md  native-clients-plan.md  native-clients.md  object-scoped-intent-ui.md  plugins.md  release-v0.0.1.md  release-v0.0.2.md  release-v0.0.3.md  release-v0.0.4.md  release-v0.0.5.md  release-v0.0.6.md  release-v0.0.7.md  release-v0.0.8.md  release-v0.0.9.md  release-v0.1.0.md  release-v0.1.1.md  release-v0.1.2.md  release-v0.1.3.md  release-v0.1.4.md  release-v0.1.5.md  release-v0.1.6.md  spec-index.md  ui-contract.md
scripts/: bump-version.sh  check-chat-prompt-contract.sh  check-native-validation-docs.mjs  check-version-consistency.sh  dev-setup.sh  e2e-ci-server.sh  e2e-local.sh  eou_server.py  f5_tts_server.py  hotword-config.yaml  hotword-generate-gptsovits.sh  hotword-generate-kokoro.sh  hotword-generate-piper.sh  hotword-generate-qwen3tts.sh  install-slopshell-user-units.sh  install-tabula-user-units.sh  install-tabura-user-units.sh  install.ps1  install.sh  piper_tts_server.py  playtest.sh  playwright.sh  setup-agent-mcp.sh  setup-claude-mcp.sh  (+15 more)
(+657 files in other folders)
