[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula"
version = "0.1.0"
description = "Minimal canvas mode prototype with strict JSONL events"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tabula" }]
dependencies = []

[project.optional-dependencies]
gui = [
  "PySide6>=6.7"
]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0"
]

[project.scripts]
tabula = "tabula.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
